--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -42,12 +42,19 @@
     transform: translateY(-10px);
 }
 
-@media screen and (max-width: 600px){
-    .home{
-        grid-template-columns: 2fr 1fr;
-    }
-    .homeleft{
-        padding: 0;
-        min-height: 90vh;
-    }
+@media screen and (max-width: 600px) {
+  .home {
+    display: block;
+    height: 100vh;
+  }
+
+  .homeleft {
+    width: 100vw;
+    height: 100vh;
+    padding: 2vmax;
+  }
+
+  .homeright {
+    display: none;
+  }
 }
